# Copyright © 2024-25 The Johns Hopkins Applied Physics Laboratory LLC.
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU Affero General Public License, version
# 3, as published by the Free Software Foundation.  If you
# would like to purchase a commercial license for this software, please
# contact APL’s Tech Transfer at 240-592-0817 or
# techtransfer@jhuapl.edu.
#
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# Affero General Public License for more details.
#
# You should have received a copy of the GNU Affero General Public
# License along with this program.  If not, see
# <https://www.gnu.org/licenses/>.

[package]
name = "constellation-pbft"
description = "Castro-Liskov PBFT consensus protocol implementation for the Constellation distributed systems platform"
repository = "https://github.com/constellation-system/constellation-pbft"
version = "0.0.0"
authors = [ "Eric McCorkle <eric.mccorkle@jhuapl.edu>" ]
rust-version = "1.83"
license = "AGPL-3.0-only"
keywords = ["networking", "distributed systems", "consensus"]
categories = ["network-programming"]
exclude = [
    ".gitignore"
]
edition = "2018"

[features]
default = ["gssapi", "log", "openssl", "unix"]
gssapi = [
    "constellation-common/gssapi",
    "constellation-consensus-common/gssapi"
]
log = [
    "dep:log",
    "constellation-common/log",
    "constellation-consensus-common/log"
]
openssl = [
    "constellation-common/openssl",
    "constellation-consensus-common/openssl"
]
unix = [
    "constellation-common/unix",
    "constellation-consensus-common/unix"
]

[dependencies]
asn1rs = { version = "0.3" }
bitvec = { version = "1.0" }
constellation-common = { git = "https://github.com/constellation-system/constellation-common.git", branch = "project/ioc-caps", default-features = false }
constellation-consensus-common = { git = "https://github.com/constellation-system/constellation-consensus-common.git", branch = "project/ioc-caps", default-features = false }
log = { version = "0.4", optional = true }
serde = { version = "1.0", features = ["derive"] }

rand = { version = "0.8" }

[build-dependencies]
asn1rs = { version = "0.3" }

[dev-dependencies]
env_logger = { version = "0.10" }
serde_yaml = { version = "0.9" }
